--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,9 @@
 DISCORD_TOKEN=your_discord_bot_token_here
 OPENAI_KEY=your_openai_api_key_here
-DATABASE_URL=sqlite:///feedback.db  # Change to postgresql://user:pass@localhost/dbname for PostgreSQL
+
+# Database configuration
+# SQLite (default)
+DATABASE_URL=sqlite:///instance/feedback.db
+
+# PostgreSQL example
+# DATABASE_URL=postgresql://user:pass@localhost/dbname
