--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,44 @@
+# Environment and configuration
 .env
+.env.*
+!.env.example
+
+# Python
 __pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+env/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Instance specific
+instance/
+*.db
+*.sqlite
+*.sqlite3
 *.log
-*.pyc
-.DS_Store
+
+# IDE
+.idea/
 .vscode/
+*.swp
+*.swo
+.DS_Store
+
+# Project specific
+feedback_log.txt
